# AMAC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
amac/: .gitignore  __init__.py  _json.py  _yaml.py  cli.py  config.py  evidence.py  models.py
amac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
amac/auth/: flows.py
amac/diffing/: __init__.py  compare.py  heuristics.py
amac/discovery/: __init__.py  crawl.py  openapi.py  sampler.py
amac/report/: __init__.py  build.py
amac/runner/: __init__.py  client.py  probes.py
examples/: auth.yml  auth_demo.yml  auth_form_login.yml  auth_juice.yml  auth_oauth2.yml  openapi.json  openapi_juice_min.yml  openapi_local.json  openapi_servervars.json  scope.yml  scope_advanced.yml  scope_juice.yml  scope_local.yml  scope_servervars.yml
scripts/: demo.sh  demo_ps.ps1  demo_win.bat  mock_api.py
tests/: conftest.py  test_diffing_classify.py  test_openapi_mapping.py  test_openapi_servervars.py
